name:                filewatch
version:             0.1.0.0
synopsis:            Observe a file for changes and automatically load it
description:         Please see README.md
homepage:            http://github.com/agrafix/filewatch#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           2015 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC==7.10.2

library
  hs-source-dirs:      src
  exposed-modules:     System.FileWatch
  build-depends:       base >= 4.7 && < 5,
                       fsnotify >=0.2,
                       stm >=2.4,
                       filepath >=1.4,
                       bytestring >=0.10
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/filewatch
